API/ANALIZADOR/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    r_cos
    r_log
    r_log10
    r_sin
    r_sqrt
    r_tan
    r_typeof

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> print ptcoma
Rule 5     instruccion -> println ptcoma
Rule 6     instruccion -> asignacion ptcoma
Rule 7     instruccion -> condicional r_end ptcoma
Rule 8     instruccion -> whilee r_end ptcoma
Rule 9     instruccion -> forr r_end ptcoma
Rule 10    instruccion -> struct ptcoma
Rule 11    instruccion -> funtionn r_end ptcoma
Rule 12    instruccion -> llamada ptcoma
Rule 13    instruccion -> array ptcoma
Rule 14    instruccion -> BREAKk ptcoma
Rule 15    instruccion -> RETURNN ptcoma
Rule 16    instruccion -> CONTINUEE ptcoma
Rule 17    instruccion -> GLOBAL ptcoma
Rule 18    instruccion -> LOCAL ptcoma
Rule 19    instruccion -> PUSHH ptcoma
Rule 20    instruccion -> POPP ptcoma
Rule 21    instruccion -> LENGHTT ptcoma
Rule 22    PUSHH -> r_push not pizq expresion coma expresion pder
Rule 23    POPP -> r_pop not pizq expresion pder
Rule 24    LENGHTT -> r_length pizq expresion pder
Rule 25    GLOBAL -> r_global id
Rule 26    GLOBAL -> r_global id igualT expresion
Rule 27    GLOBAL -> r_global id igualT expresion dospuntos dospuntos tipo
Rule 28    GLOBAL -> r_global id igualT expresion dospuntos dospuntos id
Rule 29    LOCAL -> r_local id
Rule 30    LOCAL -> r_local id igualT expresion
Rule 31    LOCAL -> r_local id igualT expresion dospuntos dospuntos tipo
Rule 32    LOCAL -> r_local id igualT expresion dospuntos dospuntos id
Rule 33    condicional -> if r_else instrucciones
Rule 34    if -> r_if expresion instrucciones
Rule 35    if -> if r_elseif expresion instrucciones
Rule 36    condicional -> if
Rule 37    BREAKk -> r_break
Rule 38    CONTINUEE -> r_continue
Rule 39    RETURNN -> r_return
Rule 40    RETURNN -> r_return expresion
Rule 41    whilee -> r_while expresion instrucciones
Rule 42    forr -> r_for id r_in expresion instrucciones
Rule 43    asignacion -> id igualT expresion
Rule 44    asignacion -> id igualT expresion dospuntos dospuntos tipo
Rule 45    asignacion -> id igualT expresion dospuntos dospuntos id
Rule 46    array -> id number_array lista_id igualT expresion
Rule 47    array -> id number_array igualT expresion
Rule 48    asignacion -> id lista_id igualT expresion
Rule 49    lista_id -> lista_id punto id
Rule 50    lista_id -> lista_id punto id number_array
Rule 51    lista_id -> punto id
Rule 52    lista_id -> punto id number_array
Rule 53    llamada -> id pizq parametro_print pder
Rule 54    llamada -> id pizq pder
Rule 55    funtionn -> r_function id pizq pder instrucciones
Rule 56    funtionn -> r_function id pizq parametros_function pder instrucciones
Rule 57    parametros_function -> parametros_function coma id
Rule 58    parametros_function -> parametros_function coma id dospuntos dospuntos tipo
Rule 59    parametros_function -> parametros_function coma id dospuntos dospuntos id
Rule 60    parametros_function -> id
Rule 61    parametros_function -> id dospuntos dospuntos tipo
Rule 62    parametros_function -> id dospuntos dospuntos id
Rule 63    struct -> r_struct id parametros_struct r_end
Rule 64    struct -> r_mutable r_struct id parametros_struct r_end
Rule 65    parametros_struct -> parametros_struct parametro_struct
Rule 66    parametros_struct -> parametro_struct
Rule 67    parametro_struct -> id ptcoma
Rule 68    parametro_struct -> id dospuntos dospuntos tipo ptcoma
Rule 69    parametro_struct -> id dospuntos dospuntos id ptcoma
Rule 70    print -> r_print pizq parametro_print pder
Rule 71    println -> r_println pizq parametro_print pder
Rule 72    print -> r_print pizq pder
Rule 73    println -> r_println pizq pder
Rule 74    parametro_print -> parametro_print coma expresion
Rule 75    parametro_print -> expresion
Rule 76    tipo -> r_int64
Rule 77    tipo -> r_float64
Rule 78    tipo -> r_stringT
Rule 79    tipo -> r_bool
Rule 80    tipo -> r_nothingT
Rule 81    tipo -> r_char
Rule 82    expresion -> exp_struct
Rule 83    exp_struct -> exp_struct punto id
Rule 84    exp_struct -> exp_struct punto id number_array
Rule 85    exp_struct -> id
Rule 86    exp_struct -> id number_array
Rule 87    number_array -> cizq expresion cder
Rule 88    number_array -> number_array cizq expresion cder
Rule 89    expresion -> cizq expresion_exp cder
Rule 90    expresion_exp -> expresion_exp coma expresion
Rule 91    expresion_exp -> expresion
Rule 92    expresion -> id pizq parametro_print pder
Rule 93    expresion -> r_parse pizq tipo coma expresion pder
Rule 94    expresion -> r_trunc pizq tipo coma expresion pder
Rule 95    expresion -> r_length pizq expresion pder
Rule 96    expresion -> r_trunc pizq expresion pder
Rule 97    expresion -> r_float pizq expresion pder
Rule 98    expresion -> r_string pizq expresion pder
Rule 99    expresion -> r_uppercase pizq expresion pder
Rule 100   expresion -> r_lowercase pizq expresion pder
Rule 101   expresion -> expresion dospuntos expresion
Rule 102   expresion -> dospuntos
Rule 103   expresion -> expresion suma expresion
Rule 104   expresion -> expresion resta expresion
Rule 105   expresion -> expresion mul expresion
Rule 106   expresion -> expresion div expresion
Rule 107   expresion -> expresion elevado expresion
Rule 108   expresion -> expresion modulo expresion
Rule 109   expresion -> expresion igual expresion
Rule 110   expresion -> expresion diferente expresion
Rule 111   expresion -> expresion mayor expresion
Rule 112   expresion -> expresion menor expresion
Rule 113   expresion -> expresion mayor_igual expresion
Rule 114   expresion -> expresion menor_igual expresion
Rule 115   expresion -> expresion and expresion
Rule 116   expresion -> expresion or expresion
Rule 117   expresion -> resta expresion
Rule 118   expresion -> not expresion
Rule 119   expresion -> int
Rule 120   expresion -> decimal
Rule 121   expresion -> char
Rule 122   expresion -> string
Rule 123   expresion -> r_false
Rule 124   expresion -> r_true
Rule 125   expresion -> r_nothing
Rule 126   expresion -> pizq expresion pder

Terminals, with rules where they appear

and                  : 115
cder                 : 87 88 89
char                 : 121
cizq                 : 87 88 89
coma                 : 22 57 58 59 74 90 93 94
decimal              : 120
diferente            : 110
div                  : 106
dospuntos            : 27 27 28 28 31 31 32 32 44 44 45 45 58 58 59 59 61 61 62 62 68 68 69 69 101 102
elevado              : 107
error                : 
id                   : 25 26 27 28 28 29 30 31 32 32 42 43 44 45 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 59 60 61 62 62 63 64 67 68 69 69 83 84 85 86 92
igual                : 109
igualT               : 26 27 28 30 31 32 43 44 45 46 47 48
int                  : 119
mayor                : 111
mayor_igual          : 113
menor                : 112
menor_igual          : 114
modulo               : 108
mul                  : 105
not                  : 22 23 118
or                   : 116
pder                 : 22 23 24 53 54 55 56 70 71 72 73 92 93 94 95 96 97 98 99 100 126
pizq                 : 22 23 24 53 54 55 56 70 71 72 73 92 93 94 95 96 97 98 99 100 126
ptcoma               : 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 67 68 69
punto                : 49 50 51 52 83 84
r_bool               : 79
r_break              : 37
r_char               : 81
r_continue           : 38
r_cos                : 
r_else               : 33
r_elseif             : 35
r_end                : 7 8 9 11 63 64
r_false              : 123
r_float              : 97
r_float64            : 77
r_for                : 42
r_function           : 55 56
r_global             : 25 26 27 28
r_if                 : 34
r_in                 : 42
r_int64              : 76
r_length             : 24 95
r_local              : 29 30 31 32
r_log                : 
r_log10              : 
r_lowercase          : 100
r_mutable            : 64
r_nothing            : 125
r_nothingT           : 80
r_parse              : 93
r_pop                : 23
r_print              : 70 72
r_println            : 71 73
r_push               : 22
r_return             : 39 40
r_sin                : 
r_sqrt               : 
r_string             : 98
r_stringT            : 78
r_struct             : 63 64
r_tan                : 
r_true               : 124
r_trunc              : 94 96
r_typeof             : 
r_uppercase          : 99
r_while              : 41
resta                : 104 117
string               : 122
suma                 : 103

Nonterminals, with rules where they appear

BREAKk               : 14
CONTINUEE            : 16
GLOBAL               : 17
LENGHTT              : 21
LOCAL                : 18
POPP                 : 20
PUSHH                : 19
RETURNN              : 15
array                : 13
asignacion           : 6
condicional          : 7
exp_struct           : 82 83 84
expresion            : 22 22 23 24 26 27 28 30 31 32 34 35 40 41 42 43 44 45 46 47 48 74 75 87 88 90 91 93 94 95 96 97 98 99 100 101 101 103 103 104 104 105 105 106 106 107 107 108 108 109 109 110 110 111 111 112 112 113 113 114 114 115 115 116 116 117 118 126
expresion_exp        : 89 90
forr                 : 9
funtionn             : 11
if                   : 33 35 36
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 33 34 35 41 42 55 56
lista_id             : 46 48 49 50
llamada              : 12
number_array         : 46 47 50 52 84 86 88
parametro_print      : 53 70 71 74 92
parametro_struct     : 65 66
parametros_function  : 56 57 58 59
parametros_struct    : 63 64 65
print                : 4
println              : 5
struct               : 10
tipo                 : 27 31 44 58 61 68 93 94
whilee               : 8

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . print ptcoma
    (5) instruccion -> . println ptcoma
    (6) instruccion -> . asignacion ptcoma
    (7) instruccion -> . condicional r_end ptcoma
    (8) instruccion -> . whilee r_end ptcoma
    (9) instruccion -> . forr r_end ptcoma
    (10) instruccion -> . struct ptcoma
    (11) instruccion -> . funtionn r_end ptcoma
    (12) instruccion -> . llamada ptcoma
    (13) instruccion -> . array ptcoma
    (14) instruccion -> . BREAKk ptcoma
    (15) instruccion -> . RETURNN ptcoma
    (16) instruccion -> . CONTINUEE ptcoma
    (17) instruccion -> . GLOBAL ptcoma
    (18) instruccion -> . LOCAL ptcoma
    (19) instruccion -> . PUSHH ptcoma
    (20) instruccion -> . POPP ptcoma
    (21) instruccion -> . LENGHTT ptcoma
    (70) print -> . r_print pizq parametro_print pder
    (72) print -> . r_print pizq pder
    (71) println -> . r_println pizq parametro_print pder
    (73) println -> . r_println pizq pder
    (43) asignacion -> . id igualT expresion
    (44) asignacion -> . id igualT expresion dospuntos dospuntos tipo
    (45) asignacion -> . id igualT expresion dospuntos dospuntos id
    (48) asignacion -> . id lista_id igualT expresion
    (33) condicional -> . if r_else instrucciones
    (36) condicional -> . if
    (41) whilee -> . r_while expresion instrucciones
    (42) forr -> . r_for id r_in expresion instrucciones
    (63) struct -> . r_struct id parametros_struct r_end
    (64) struct -> . r_mutable r_struct id parametros_struct r_end
    (55) funtionn -> . r_function id pizq pder instrucciones
    (56) funtionn -> . r_function id pizq parametros_function pder instrucciones
    (53) llamada -> . id pizq parametro_print pder
    (54) llamada -> . id pizq pder
    (46) array -> . id number_array lista_id igualT expresion
    (47) array -> . id number_array igualT expresion
    (37) BREAKk -> . r_break
    (39) RETURNN -> . r_return
    (40) RETURNN -> . r_return expresion
    (38) CONTINUEE -> . r_continue
    (25) GLOBAL -> . r_global id
    (26) GLOBAL -> . r_global id igualT expresion
    (27) GLOBAL -> . r_global id igualT expresion dospuntos dospuntos tipo
    (28) GLOBAL -> . r_global id igualT expresion dospuntos dospuntos id
    (29) LOCAL -> . r_local id
    (30) LOCAL -> . r_local id igualT expresion
    (31) LOCAL -> . r_local id igualT expresion dospuntos dospuntos tipo
    (32) LOCAL -> . r_local id igualT expresion dospuntos dospuntos id
    (22) PUSHH -> . r_push not pizq expresion coma expresion pder
    (23) POPP -> . r_pop not pizq expresion pder
    (24) LENGHTT -> . r_length pizq expresion pder
    (34) if -> . r_if expresion instrucciones
    (35) if -> . if r_elseif expresion instrucciones

    r_print         shift and go to state 22
    r_println       shift and go to state 23
    id              shift and go to state 24
    r_while         shift and go to state 26
    r_for           shift and go to state 27
    r_struct        shift and go to state 28
    r_mutable       shift and go to state 29
    r_function      shift and go to state 30
    r_break         shift and go to state 31
    r_return        shift and go to state 32
    r_continue      shift and go to state 33
    r_global        shift and go to state 34
    r_local         shift and go to state 35
    r_push          shift and go to state 36
    r_pop           shift and go to state 37
    r_length        shift and go to state 38
    r_if            shift and go to state 39

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    print                          shift and go to state 4
    println                        shift and go to state 5
    asignacion                     shift and go to state 6
    condicional                    shift and go to state 7
    whilee                         shift and go to state 8
    forr                           shift and go to state 9
    struct                         shift and go to state 10
    funtionn                       shift and go to state 11
    llamada                        shift and go to state 12
    array                          shift and go to state 13
    BREAKk                         shift and go to state 14
    RETURNN                        shift and go to state 15
    CONTINUEE                      shift and go to state 16
    GLOBAL                         shift and go to state 17
    LOCAL                          shift and go to state 18
    PUSHH                          shift and go to state 19
    POPP                           shift and go to state 20
    LENGHTT                        shift and go to state 21
    if                             shift and go to state 25

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . print ptcoma
    (5) instruccion -> . println ptcoma
    (6) instruccion -> . asignacion ptcoma
    (7) instruccion -> . condicional r_end ptcoma
    (8) instruccion -> . whilee r_end ptcoma
    (9) instruccion -> . forr r_end ptcoma
    (10) instruccion -> . struct ptcoma
    (11) instruccion -> . funtionn r_end ptcoma
    (12) instruccion -> . llamada ptcoma
    (13) instruccion -> . array ptcoma
    (14) instruccion -> . BREAKk ptcoma
    (15) instruccion -> . RETURNN ptcoma
    (16) instruccion -> . CONTINUEE ptcoma
    (17) instruccion -> . GLOBAL ptcoma
    (18) instruccion -> . LOCAL ptcoma
    (19) instruccion -> . PUSHH ptcoma
    (20) instruccion -> . POPP ptcoma
    (21) instruccion -> . LENGHTT ptcoma
    (70) print -> . r_print pizq parametro_print pder
    (72) print -> . r_print pizq pder
    (71) println -> . r_println pizq parametro_print pder
    (73) println -> . r_println pizq pder
    (43) asignacion -> . id igualT expresion
    (44) asignacion -> . id igualT expresion dospuntos dospuntos tipo
    (45) asignacion -> . id igualT expresion dospuntos dospuntos id
    (48) asignacion -> . id lista_id igualT expresion
    (33) condicional -> . if r_else instrucciones
    (36) condicional -> . if
    (41) whilee -> . r_while expresion instrucciones
    (42) forr -> . r_for id r_in expresion instrucciones
    (63) struct -> . r_struct id parametros_struct r_end
    (64) struct -> . r_mutable r_struct id parametros_struct r_end
    (55) funtionn -> . r_function id pizq pder instrucciones
    (56) funtionn -> . r_function id pizq parametros_function pder instrucciones
    (53) llamada -> . id pizq parametro_print pder
    (54) llamada -> . id pizq pder
    (46) array -> . id number_array lista_id igualT expresion
    (47) array -> . id number_array igualT expresion
    (37) BREAKk -> . r_break
    (39) RETURNN -> . r_return
    (40) RETURNN -> . r_return expresion
    (38) CONTINUEE -> . r_continue
    (25) GLOBAL -> . r_global id
    (26) GLOBAL -> . r_global id igualT expresion
    (27) GLOBAL -> . r_global id igualT expresion dospuntos dospuntos tipo
    (28) GLOBAL -> . r_global id igualT expresion dospuntos dospuntos id
    (29) LOCAL -> . r_local id
    (30) LOCAL -> . r_local id igualT expresion
    (31) LOCAL -> . r_local id igualT expresion dospuntos dospuntos tipo
    (32) LOCAL -> . r_local id igualT expresion dospuntos dospuntos id
    (22) PUSHH -> . r_push not pizq expresion coma expresion pder
    (23) POPP -> . r_pop not pizq expresion pder
    (24) LENGHTT -> . r_length pizq expresion pder
    (34) if -> . r_if expresion instrucciones
    (35) if -> . if r_elseif expresion instrucciones

    $end            reduce using rule 1 (init -> instrucciones .)
    r_print         shift and go to state 22
    r_println       shift and go to state 23
    id              shift and go to state 24
    r_while         shift and go to state 26
    r_for           shift and go to state 27
    r_struct        shift and go to state 28
    r_mutable       shift and go to state 29
    r_function      shift and go to state 30
    r_break         shift and go to state 31
    r_return        shift and go to state 32
    r_continue      shift and go to state 33
    r_global        shift and go to state 34
    r_local         shift and go to state 35
    r_push          shift and go to state 36
    r_pop           shift and go to state 37
    r_length        shift and go to state 38
    r_if            shift and go to state 39

    instruccion                    shift and go to state 40
    print                          shift and go to state 4
    println                        shift and go to state 5
    asignacion                     shift and go to state 6
    condicional                    shift and go to state 7
    whilee                         shift and go to state 8
    forr                           shift and go to state 9
    struct                         shift and go to state 10
    funtionn                       shift and go to state 11
    llamada                        shift and go to state 12
    array                          shift and go to state 13
    BREAKk                         shift and go to state 14
    RETURNN                        shift and go to state 15
    CONTINUEE                      shift and go to state 16
    GLOBAL                         shift and go to state 17
    LOCAL                          shift and go to state 18
    PUSHH                          shift and go to state 19
    POPP                           shift and go to state 20
    LENGHTT                        shift and go to state 21
    if                             shift and go to state 25

state 3

    (3) instrucciones -> instruccion .

    r_print         reduce using rule 3 (instrucciones -> instruccion .)
    r_println       reduce using rule 3 (instrucciones -> instruccion .)
    id              reduce using rule 3 (instrucciones -> instruccion .)
    r_while         reduce using rule 3 (instrucciones -> instruccion .)
    r_for           reduce using rule 3 (instrucciones -> instruccion .)
    r_struct        reduce using rule 3 (instrucciones -> instruccion .)
    r_mutable       reduce using rule 3 (instrucciones -> instruccion .)
    r_function      reduce using rule 3 (instrucciones -> instruccion .)
    r_break         reduce using rule 3 (instrucciones -> instruccion .)
    r_return        reduce using rule 3 (instrucciones -> instruccion .)
    r_continue      reduce using rule 3 (instrucciones -> instruccion .)
    r_global        reduce using rule 3 (instrucciones -> instruccion .)
    r_local         reduce using rule 3 (instrucciones -> instruccion .)
    r_push          reduce using rule 3 (instrucciones -> instruccion .)
    r_pop           reduce using rule 3 (instrucciones -> instruccion .)
    r_length        reduce using rule 3 (instrucciones -> instruccion .)
    r_if            reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    r_end           reduce using rule 3 (instrucciones -> instruccion .)
    r_else          reduce using rule 3 (instrucciones -> instruccion .)
    r_elseif        reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> print . ptcoma

    ptcoma          shift and go to state 41


state 5

    (5) instruccion -> println . ptcoma

    ptcoma          shift and go to state 42


state 6

    (6) instruccion -> asignacion . ptcoma

    ptcoma          shift and go to state 43


state 7

    (7) instruccion -> condicional . r_end ptcoma

    r_end           shift and go to state 44


state 8

    (8) instruccion -> whilee . r_end ptcoma

    r_end           shift and go to state 45


state 9

    (9) instruccion -> forr . r_end ptcoma

    r_end           shift and go to state 46


state 10

    (10) instruccion -> struct . ptcoma

    ptcoma          shift and go to state 47


state 11

    (11) instruccion -> funtionn . r_end ptcoma

    r_end           shift and go to state 48


state 12

    (12) instruccion -> llamada . ptcoma

    ptcoma          shift and go to state 49


state 13

    (13) instruccion -> array . ptcoma

    ptcoma          shift and go to state 50


state 14

    (14) instruccion -> BREAKk . ptcoma

    ptcoma          shift and go to state 51


state 15

    (15) instruccion -> RETURNN . ptcoma

    ptcoma          shift and go to state 52


state 16

    (16) instruccion -> CONTINUEE . ptcoma

    ptcoma          shift and go to state 53


state 17

    (17) instruccion -> GLOBAL . ptcoma

    ptcoma          shift and go to state 54


state 18

    (18) instruccion -> LOCAL . ptcoma

    ptcoma          shift and go to state 55


state 19

    (19) instruccion -> PUSHH . ptcoma

    ptcoma          shift and go to state 56


state 20

    (20) instruccion -> POPP . ptcoma

    ptcoma          shift and go to state 57


state 21

    (21) instruccion -> LENGHTT . ptcoma

    ptcoma          shift and go to state 58


state 22

    (70) print -> r_print . pizq parametro_print pder
    (72) print -> r_print . pizq pder

    pizq            shift and go to state 59


state 23

    (71) println -> r_println . pizq parametro_print pder
    (73) println -> r_println . pizq pder

    pizq            shift and go to state 60


state 24

    (43) asignacion -> id . igualT expresion
    (44) asignacion -> id . igualT expresion dospuntos dospuntos tipo
    (45) asignacion -> id . igualT expresion dospuntos dospuntos id
    (48) asignacion -> id . lista_id igualT expresion
    (53) llamada -> id . pizq parametro_print pder
    (54) llamada -> id . pizq pder
    (46) array -> id . number_array lista_id igualT expresion
    (47) array -> id . number_array igualT expresion
    (49) lista_id -> . lista_id punto id
    (50) lista_id -> . lista_id punto id number_array
    (51) lista_id -> . punto id
    (52) lista_id -> . punto id number_array
    (87) number_array -> . cizq expresion cder
    (88) number_array -> . number_array cizq expresion cder

    igualT          shift and go to state 61
    pizq            shift and go to state 63
    punto           shift and go to state 65
    cizq            shift and go to state 66

    lista_id                       shift and go to state 62
    number_array                   shift and go to state 64

state 25

    (33) condicional -> if . r_else instrucciones
    (36) condicional -> if .
    (35) if -> if . r_elseif expresion instrucciones

    r_else          shift and go to state 67
    r_end           reduce using rule 36 (condicional -> if .)
    r_elseif        shift and go to state 68


state 26

    (41) whilee -> r_while . expresion instrucciones
    (82) expresion -> . exp_struct
    (89) expresion -> . cizq expresion_exp cder
    (92) expresion -> . id pizq parametro_print pder
    (93) expresion -> . r_parse pizq tipo coma expresion pder
    (94) expresion -> . r_trunc pizq tipo coma expresion pder
    (95) expresion -> . r_length pizq expresion pder
    (96) expresion -> . r_trunc pizq expresion pder
    (97) expresion -> . r_float pizq expresion pder
    (98) expresion -> . r_string pizq expresion pder
    (99) expresion -> . r_uppercase pizq expresion pder
    (100) expresion -> . r_lowercase pizq expresion pder
    (101) expresion -> . expresion dospuntos expresion
    (102) expresion -> . dospuntos
    (103) expresion -> . expresion suma expresion
    (104) expresion -> . expresion resta expresion
    (105) expresion -> . expresion mul expresion
    (106) expresion -> . expresion div expresion
    (107) expresion -> . expresion elevado expresion
    (108) expresion -> . expresion modulo expresion
    (109) expresion -> . expresion igual expresion
    (110) expresion -> . expresion diferente expresion
    (111) expresion -> . expresion mayor expresion
    (112) expresion -> . expresion menor expresion
    (113) expresion -> . expresion mayor_igual expresion
    (114) expresion -> . expresion menor_igual expresion
    (115) expresion -> . expresion and expresion
    (116) expresion -> . expresion or expresion
    (117) expresion -> . resta expresion
    (118) expresion -> . not expresion
    (119) expresion -> . int
    (120) expresion -> . decimal
    (121) expresion -> . char
    (122) expresion -> . string
    (123) expresion -> . r_false
    (124) expresion -> . r_true
    (125) expresion -> . r_nothing
    (126) expresion -> . pizq expresion pder
    (83) exp_struct -> . exp_struct punto id
    (84) exp_struct -> . exp_struct punto id number_array
    (85) exp_struct -> . id
    (86) exp_struct -> . id number_array

    cizq            shift and go to state 71
    id              shift and go to state 72
    r_parse         shift and go to state 74
    r_trunc         shift and go to state 75
    r_length        shift and go to state 76
    r_float         shift and go to state 77
    r_string        shift and go to state 78
    r_uppercase     shift and go to state 79
    r_lowercase     shift and go to state 80
    dospuntos       shift and go to state 81
    resta           shift and go to state 82
    not             shift and go to state 83
    int             shift and go to state 84
    decimal         shift and go to state 85
    char            shift and go to state 86
    string          shift and go to state 87
    r_false         shift and go to state 88
    r_true          shift and go to state 89
    r_nothing       shift and go to state 90
    pizq            shift and go to state 73

    expresion                      shift and go to state 69
    exp_struct                     shift and go to state 70

state 27

    (42) forr -> r_for . id r_in expresion instrucciones

    id              shift and go to state 91


state 28

    (63) struct -> r_struct . id parametros_struct r_end

    id              shift and go to state 92


state 29

    (64) struct -> r_mutable . r_struct id parametros_struct r_end

    r_struct        shift and go to state 93


state 30

    (55) funtionn -> r_function . id pizq pder instrucciones
    (56) funtionn -> r_function . id pizq parametros_function pder instrucciones

    id              shift and go to state 94


state 31

    (37) BREAKk -> r_break .

    ptcoma          reduce using rule 37 (BREAKk -> r_break .)


state 32

    (39) RETURNN -> r_return .
    (40) RETURNN -> r_return . expresion
    (82) expresion -> . exp_struct
    (89) expresion -> . cizq expresion_exp cder
    (92) expresion -> . id pizq parametro_print pder
    (93) expresion -> . r_parse pizq tipo coma expresion pder
    (94) expresion -> . r_trunc pizq tipo coma expresion pder
    (95) expresion -> . r_length pizq expresion pder
    (96) expresion -> . r_trunc pizq expresion pder
    (97) expresion -> . r_float pizq expresion pder
    (98) expresion -> . r_string pizq expresion pder
    (99) expresion -> . r_uppercase pizq expresion pder
    (100) expresion -> . r_lowercase pizq expresion pder
    (101) expresion -> . expresion dospuntos expresion
    (102) expresion -> . dospuntos
    (103) expresion -> . expresion suma expresion
    (104) expresion -> . expresion resta expresion
    (105) expresion -> . expresion mul expresion
    (106) expresion -> . expresion div expresion
    (107) expresion -> . expresion elevado expresion
    (108) expresion -> . expresion modulo expresion
    (109) expresion -> . expresion igual expresion
    (110) expresion -> . expresion diferente expresion
    (111) expresion -> . expresion mayor expresion
    (112) expresion -> . expresion menor expresion
    (113) expresion -> . expresion mayor_igual expresion
    (114) expresion -> . expresion menor_igual expresion
    (115) expresion -> . expresion and expresion
    (116) expresion -> . expresion or expresion
    (117) expresion -> . resta expresion
    (118) expresion -> . not expresion
    (119) expresion -> . int
    (120) expresion -> . decimal
    (121) expresion -> . char
    (122) expresion -> . string
    (123) expresion -> . r_false
    (124) expresion -> . r_true
    (125) expresion -> . r_nothing
    (126) expresion -> . pizq expresion pder
    (83) exp_struct -> . exp_struct punto id
    (84) exp_struct -> . exp_struct punto id number_array
    (85) exp_struct -> . id
    (86) exp_struct -> . id number_array

    ptcoma          reduce using rule 39 (RETURNN -> r_return .)
    cizq            shift and go to state 71
    id              shift and go to state 72
    r_parse         shift and go to state 74
    r_trunc         shift and go to state 75
    r_length        shift and go to state 76
    r_float         shift and go to state 77
    r_string        shift and go to state 78
    r_uppercase     shift and go to state 79
    r_lowercase     shift and go to state 80
    dospuntos       shift and go to state 81
    resta           shift and go to state 82
    not             shift and go to state 83
    int             shift and go to state 84
    decimal         shift and go to state 85
    char            shift and go to state 86
    string          shift and go to state 87
    r_false         shift and go to state 88
    r_true          shift and go to state 89
    r_nothing       shift and go to state 90
    pizq            shift and go to state 73

    expresion                      shift and go to state 95
    exp_struct                     shift and go to state 70

state 33

    (38) CONTINUEE -> r_continue .

    ptcoma          reduce using rule 38 (CONTINUEE -> r_continue .)


state 34

    (25) GLOBAL -> r_global . id
    (26) GLOBAL -> r_global . id igualT expresion
    (27) GLOBAL -> r_global . id igualT expresion dospuntos dospuntos tipo
    (28) GLOBAL -> r_global . id igualT expresion dospuntos dospuntos id

    id              shift and go to state 96


state 35

    (29) LOCAL -> r_local . id
    (30) LOCAL -> r_local . id igualT expresion
    (31) LOCAL -> r_local . id igualT expresion dospuntos dospuntos tipo
    (32) LOCAL -> r_local . id igualT expresion dospuntos dospuntos id

    id              shift and go to state 97


state 36

    (22) PUSHH -> r_push . not pizq expresion coma expresion pder

    not             shift and go to state 98


state 37

    (23) POPP -> r_pop . not pizq expresion pder

    not             shift and go to state 99


state 38

    (24) LENGHTT -> r_length . pizq expresion pder

    pizq            shift and go to state 100


state 39

    (34) if -> r_if . expresion instrucciones
    (82) expresion -> . exp_struct
    (89) expresion -> . cizq expresion_exp cder
    (92) expresion -> . id pizq parametro_print pder
    (93) expresion -> . r_parse pizq tipo coma expresion pder
    (94) expresion -> . r_trunc pizq tipo coma expresion pder
    (95) expresion -> . r_length pizq expresion pder
    (96) expresion -> . r_trunc pizq expresion pder
    (97) expresion -> . r_float pizq expresion pder
    (98) expresion -> . r_string pizq expresion pder
    (99) expresion -> . r_uppercase pizq expresion pder
    (100) expresion -> . r_lowercase pizq expresion pder
    (101) expresion -> . expresion dospuntos expresion
    (102) expresion -> . dospuntos
    (103) expresion -> . expresion suma expresion
    (104) expresion -> . expresion resta expresion
    (105) expresion -> . expresion mul expresion
    (106) expresion -> . expresion div expresion
    (107) expresion -> . expresion elevado expresion
    (108) expresion -> . expresion modulo expresion
    (109) expresion -> . expresion igual expresion
    (110) expresion -> . expresion diferente expresion
    (111) expresion -> . expresion mayor expresion
    (112) expresion -> . expresion menor expresion
    (113) expresion -> . expresion mayor_igual expresion
    (114) expresion -> . expresion menor_igual expresion
    (115) expresion -> . expresion and expresion
    (116) expresion -> . expresion or expresion
    (117) expresion -> . resta expresion
    (118) expresion -> . not expresion
    (119) expresion -> . int
    (120) expresion -> . decimal
    (121) expresion -> . char
    (122) expresion -> . string
    (123) expresion -> . r_false
    (124) expresion -> . r_true
    (125) expresion -> . r_nothing
    (126) expresion -> . pizq expresion pder
    (83) exp_struct -> . exp_struct punto id
    (84) exp_struct -> . exp_struct punto id number_array
    (85) exp_struct -> . id
    (86) exp_struct -> . id number_array

    cizq            shift and go to state 71
    id              shift and go to state 72
    r_parse         shift and go to state 74
    r_trunc         shift and go to state 75
    r_length        shift and go to state 76
    r_float         shift and go to state 77
    r_string        shift and go to state 78
    r_uppercase     shift and go to state 79
    r_lowercase     shift and go to state 80
    dospuntos       shift and go to state 81
    resta           shift and go to state 82
    not             shift and go to state 83
    int             shift and go to state 84
    decimal         shift and go to state 85
    char            shift and go to state 86
    string          shift and go to state 87
    r_false         shift and go to state 88
    r_true          shift and go to state 89
    r_nothing       shift and go to state 90
    pizq            shift and go to state 73

    expresion                      shift and go to state 101
    exp_struct                     shift and go to state 70

state 40

    (2) instrucciones -> instrucciones instruccion .
